# Telegram-Arcade-Game-Bot

./: 24_challenge.html  README.md  color_clicker.html  game.html  index.html  pyproject.toml  requirements.txt  speed_words.html
stylesheets/: index.css  main.css
telegram_color_clicker_game_bot/: 24_challenge.html  __main__.py  bot.py  color_clicker.html  game.html  index.html  speed_words.html  word_game.html
telegram_color_clicker_game_bot/games/challenge24/: challenge24.css  challenge24.html  challenge24.js  challenge24_old.js
telegram_color_clicker_game_bot/games/color_clicker/: color_clicker.css  color_clicker.html  color_clicker.js
telegram_color_clicker_game_bot/games/flying_turtle/: flying_turtle.css  flying_turtle.html  flying_turtle.js
telegram_color_clicker_game_bot/games/speed_words/: speed_words.css  speed_words.html  speed_words.js
telegram_color_clicker_game_bot/static/: 24_challenge.html  color_clicker.html  speed_words.html
telegram_color_clicker_game_bot/stylesheets/: index.css  main.css
telegram_color_clicker_game_bot/templates/: index.html
